Switched euclidean and arc length in text

--- a/Monday_UC_optimization/Lab_UC_optimization1.ipynb
+++ b/Monday_UC_optimization/Lab_UC_optimization1.ipynb
@@ -588,7 +588,7 @@
     "So what we need is some different measure to penalize points which are close to each other but still on the curve. One idea is to use the regularized measure\n",
     "\n",
     "$$\n",
-    "f_{\\text{regularized}}(x,y):= \\frac{\\text{arc length}}{\\text{euclidean length}} = \\frac{\\int_{x}^{y}\\left(1 + (f'(u))^2\\right) du}{\\sqrt{(y_1-x_1)^2 + (y_2-x_2)^2}}\n",
+    "f_{\\text{regularized}}(x,y):= \\frac{\\text{euclidean length}}{\\text{arc length}} = \\frac{\\sqrt{(y_1-x_1)^2 + (y_2-x_2)^2}}{\\int_{x}^{y}\\left(1 + (f'(u))^2\\right) du}\n",
     "$$\n",
     "\n",
     "where the arc length is to shortest distance of two points on the curve (with f(u) refering to the spline curve here). "
