Comment on optimization for first Himmelblau run

--- a/Tuesday_UC_optimization/Lab_UC_optimization2.ipynb
+++ b/Tuesday_UC_optimization/Lab_UC_optimization2.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to optimize the Himmelblau function with its special structure with the Nelder-Mead algorithm. Given below is a code that has starting point $(0,0)$ which is in the middle of all local minima. Can you guess to what of the four local minimum it will converge?"
+    "We want to optimize the Himmelblau function with its special structure with the Nelder-Mead algorithm. Given below is a code that has starting point $(0,0)$ which is in the middle of all local minima. Can you guess to what of the four local minimum it will converge? (You need to add the line in the code.)"
    ]
   },
   {
@@ -139,7 +139,8 @@
     "plt.xlabel('x')\n",
     "plt.ylabel('y')\n",
     "plt.contour(X,Y,Z, 50, cmap = 'jet')\n",
-    "plt.plot(ps[:, 0], ps[:, 1], '-ro')\n",
+    "# add this line to see optimization route <-------------------------\n",
+    "#plt.plot(ps[:, 0], ps[:, 1], '-ro')\n",
     "plt.plot(3, 2, 'ko', label = \"Local Minima\")\n",
     "plt.plot(-2.805118,3.131312, 'ko')\n",
     "plt.plot(-3.779310, -3.283186, 'ko')\n",
