get rid of --yes

--- a/Wednesday_VacuumOpt/Lab_01.ipynb
+++ b/Wednesday_VacuumOpt/Lab_01.ipynb
@@ -364,9 +364,9 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install --yes --upgrade numpy scipy\n",
-    "!{sys.executable} -m pip install --yes plotly pandas\n",
-    "!{sys.executable} -m pip install --yes -vvv --no-cache-dir git+https://github.com/florianwechsung/PyPlasmaOpt@fw/riskaverse"
+    "!{sys.executable} -m pip install --upgrade numpy scipy\n",
+    "!{sys.executable} -m pip install plotly pandas\n",
+    "!{sys.executable} -m pip install -vvv --no-cache-dir git+https://github.com/florianwechsung/PyPlasmaOpt@fw/riskaverse"
    ]
   },
   {
