Small fixes to typos.

--- a/Tuesday_UC_optimization/Lec_UC_optimization2.ipynb
+++ b/Tuesday_UC_optimization/Lec_UC_optimization2.ipynb
@@ -132,7 +132,7 @@
     "$$\n",
     "This time, we'll discretize via Gauss quadrature, solving\n",
     "$$\n",
-    "  \\min_{u \\in \\mathcal{P}^6} \\frac{1}{N} \\sum_{j=1}^N w_j |u(x_j)-\\exp(-x_j^2)|^2.\n",
+    "  \\min_{u \\in \\mathcal{P}^6} \\sum_{j=1}^N w_j |u(x_j)-\\exp(-x_j^2)|^2.\n",
     "$$\n",
     "where the $x_j$ are the quadrature nodes and $w_j$ are the quadrature weights."
    ]
@@ -254,7 +254,7 @@
     "\n",
     "In stellarator optimization problems, the tradeoff between different objectives is often encoded as a weighted nonlinear least squares problem (this is the strategy used in the STELLOPT and ROSE packages):\n",
     "$$\n",
-    "  \\chi^2(x) = \\sum_k \\sigma_k^{-2} (F_k(x)-F_k^*),\n",
+    "  \\chi^2(x) = \\sum_k \\sigma_k^{-2} (F_k(x)-F_k^*)^2,\n",
     "$$\n",
     "where $F_k(x)$ is a quantity of interest and $F_k^*$ is a target value.\n",
     "\n",
@@ -721,7 +721,7 @@
     "\n",
     "The Nelder-Mead algorithm is one of the most popular derivative-free\n",
     "optimizers around.  For example, this is the default algorithm used\n",
-    "in MATLAB's {\\tt fminsearch}, as well as being one of the options in\n",
+    "in MATLAB's `fminsearch`, as well as being one of the options in\n",
     "`scipy.optimize.minimize`.  As with methods like COBYLA, the\n",
     "Nelder-Mead approach maintains a simplex of $n+1$ function evaluation\n",
     "points that it updates at each step.  In Nelder-Mead,\n",
@@ -812,7 +812,7 @@
     "Powell (2007).  There is also a beautiful survey of direct\n",
     "search methods by Kolda, Lewis, and Torczon from 2003 (\"[Optimization\n",
     "by direct search: new perspectives no some classical and modern\n",
-    "methods](http://www.kolda.net/publication/koleto03/),\" *SIAM Review*, vol 45, pp.~385--482).\n",
+    "methods](http://www.kolda.net/publication/koleto03/),\" *SIAM Review*, vol 45, pp. 385--482).\n",
     "For more detail, try *[Introduction to Derivative-Free Optimization](https://epubs.siam.org/doi/book/10.1137/1.9780898718768)* \n",
     "by Conn, Scheinberg, and Vicente (SIAM, 2009) -- it is part of SIAM's eBook service,\n",
     "if your university subscribes.  For an overview of response surface methods,\n",
