--- a/Wednesday_VacuumOpt/Project 3 - Hessian.ipynb
+++ b/Wednesday_VacuumOpt/Project 3 - Hessian.ipynb
@@ -177,7 +177,7 @@
     "    res = obj.res\n",
     "    dres = obj.dres\n",
     "    res += 0.5 * alpha * np.sum((x-x0)**2)\n",
-    "    dres[idxs] += alpha * (x-x0)\n",
+    "    dres += alpha * (x-x0)\n",
     "    return res, dres\n",
     "\n",
     "obj.clear_history()\n",
