--- a/Wednesday_VacuumOpt/Lab_01.ipynb
+++ b/Wednesday_VacuumOpt/Lab_01.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can plot the coils of stellarator and the expansion axis using the `plot_stellarator` function."
+    "We can plot the coils of the stellarator and the expansion axis using the `plot_stellarator` function."
    ]
   },
   {
@@ -127,7 +127,7 @@
     "## Tasks\n",
     "After calling `obj.update(x)` the objective value at `x` is stored in `obj.res` and the gradient is stored in `obj.dres`.\n",
     "\n",
-    "1) Look at the documentation for the `minimize` function in `scipy.optimize` and use the `BFGS` algorithm to solve the optimisation problem. You can use the `obj.callback()` function to obtain output as the optimisation progresses.\n",
+    "1) Look at the documentation for the `minimize` function in `scipy.optimize` and use the `BFGS` algorithm to solve the optimisation problem. You can pass `obj.callback` to the `callback` argument of `minimize` to obtain output as the optimisation progresses. Limit the optimisation algorithm to 200 iterations. (For 200 steps the algorithm takes about a minute.)\n",
     "\n",
     "2) Plot the resulting coils. How do they differ from the initial coils?\n",
     "\n",
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: is you use the callback as above, the function evaluations at the _accepted_ optimisation iterates are stored in `obj.Jvals`. That way you obtain a monotone curve in the plot. Before running a new optimisation problem, you can clear this array by calling `obj.clear_history()`."
+    "Note: if you use the callback `obj.callback`, the function evaluations at the _accepted_ optimisation iterates are stored in `obj.Jvals`. If you plot these, you obtain a monotone curve in the plot. Before running a new optimisation problem, you can clear this array by calling `obj.clear_history()`."
    ]
   },
   {
