--- a/Wednesday_VacuumOpt/Project 1 - Finite differences.ipynb
+++ b/Wednesday_VacuumOpt/Project 1 - Finite differences.ipynb
@@ -18,7 +18,7 @@
     "# Lets begin by setting up our toy problem again.\n",
     "from pyplasmaopt import *\n",
     "nfp = 2\n",
-    "(coils, currents, magnetic_axis, eta_bar) = get_24_coil_data(nfp=nfp, ppp=10, at_optimum=False)\n",
+    "(coils, currents, magnetic_axis, eta_bar) = get_24_coil_data(nfp=nfp, ppp=8, at_optimum=False)\n",
     "stellarator = CoilCollection(coils, currents, nfp, True)\n",
     "iota_target = 0.103\n",
     "coil_length_target = 4.398229715025710\n",
@@ -36,7 +36,7 @@
     "A first order approximation to the derivative at $x$ in direction of the $i$-th degree of freedom is given by\n",
     "$$ (\\nabla f(x))_i= \\frac{f(x+\\epsilon e_i) - f(x)}{\\epsilon} + O(\\epsilon). $$\n",
     "\n",
-    "The following code will compute the gradient in a direction $h$ and compares it to the derivative that the code computes for us."
+    "The following code will compute the gradient in a direction $h$ and compares it to the derivative that the code computes for us. Note that we pass `compute_derivative=False` to the `update` function. That's a bit quicker than just calling update, as it will skip those computations that are not needed for the objective value."
    ]
   },
   {
@@ -71,7 +71,7 @@
     "\n",
     "1. Vary the stepsize $\\epsilon$. As $\\epsilon\\to0$, how does the error behave?\n",
     "2. Look up the 2nd, 4th, and 6th order finite difference stencils on wikipedia and implement them. Show a plot comparing the step size $\\epsilon$ with the approximation error. What do you observe?\n",
-    "3. The `minimize` function in scipy supports finite differences to compute the gradient. To use this, set the argument `jac=False` and make sure that the function you pass to minimise only returns the objective value, and not both objective and gradient. Now run the optimisation once with exact gradients and once using the scipy finite difference approximation for 500 iterations. Compare the runtime of the two and plot the objective values. What to do you observe? Call `print` on the object that `minimize` returns to find out why each algorithm terminated.\n",
+    "3. The `minimize` function in scipy supports finite differences to compute the gradient. To use this, set the argument `jac=False` and make sure that the function you pass to `minimize` only returns the objective value, and not both objective and gradient. Now run the optimisation once with exact gradients and once using the scipy finite difference approximation for 500 iterations. Compare the runtime of the two and plot the objective values. What to do you observe? Call `print` on the object that `minimize` returns to find out why each algorithm terminated.\n",
     "\n",
     "*Note*: If you pass `callback=obj.callback` to `minimize`, then the objective history will be stored in `obj.Jvals`. Beore running a second optimisation, you can reset this history by calling `obj.clear_history()`."
    ]
@@ -191,7 +191,7 @@
     "    obj.update(x, compute_derivative=False)\n",
     "    res = obj.res\n",
     "    return res\n",
-    "\n",
+    "# Warning: this takes a couple minutes\n",
     "res = minimize(scipy_fun_fd, obj.x0, jac=False, method='bfgs', tol=1e-20,\n",
     "               options={\"maxiter\": 500},\n",
     "               callback=obj.callback)\n",
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
