--- a/Wednesday_VacuumOpt/Project 3 - Hessian.ipynb
+++ b/Wednesday_VacuumOpt/Project 3 - Hessian.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "Since the code can only compute the objective value and its first derivative, we will have to use finite differences to approximate the Hessian matrix.\n",
     "The $i$-th column of the Hessian $H$ can be approximated via\n",
-    "$$\\tilde H(:, i) = \\frac{\\nabla f(x+\\epsilon e_i) - \\nabla f(x-\\epsilon e_i)}{2\\epsilon}$$\n",
+    "$$ H(:, i) \\approx \\frac{\\nabla f(x+\\epsilon e_i) - \\nabla f(x-\\epsilon e_i)}{2\\epsilon}$$\n",
     "where $e_i$ is the $i$-th unit vector and for some small $\\epsilon$ (e.g. $\\epsilon=10^{-5}$)."
    ]
   },
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The eigenvalue differ by several orders of magnitude. This means, that the objective varies strongly in some directions, but barely in others. Standard gradient descent methods struggle for these problems. Quasi-Newton methods such as BFGS can learn the local structue of the objective and will chose steps that are appropriately scaled in the directions of large and small eigenvalues."
+    "The eigenvalues differ by several orders of magnitude. This means that the objective varies strongly in some directions, but barely in others. Standard gradient descent methods struggle for these problems. Quasi-Newton methods such as BFGS can learn the local structue of the objective and will chose steps that are appropriately scaled in the directions of large and small eigenvalues."
    ]
   },
   {
@@ -239,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
