--- a/Wednesday_VacuumOpt/Project 4 - Algorithm comparison.ipynb
+++ b/Wednesday_VacuumOpt/Project 4 - Algorithm comparison.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The goal of this project is to compare the performance of different optimisation algorithms and the effect of using different initial guesses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,7 +23,7 @@
     "# Lets begin by setting up our toy problem again.\n",
     "from pyplasmaopt import *\n",
     "nfp = 2\n",
-    "(coils, currents, magnetic_axis, eta_bar) = get_24_coil_data(nfp=nfp, ppp=10, at_optimum=False)\n",
+    "(coils, currents, magnetic_axis, eta_bar) = get_24_coil_data(nfp=nfp, ppp=8, at_optimum=False)\n",
     "stellarator = CoilCollection(coils, currents, nfp, True)\n",
     "iota_target = 0.103\n",
     "coil_length_target = 4.398229715025710\n",
@@ -117,6 +124,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Observation \n",
+    "\n",
+    "The derivative free Nelder-Mead method makes essentially no progress. BFGS is by far the best performing, as it makes good use of second order information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Task 2"
    ]
   },
@@ -143,7 +159,7 @@
    "source": [
     "obj.clear_history()\n",
     "res = minimize(scipy_fun, x0_perturb, jac=True, method='bfgs', tol=1e-20,\n",
-    "               options={\"maxiter\": 500},\n",
+    "               options={\"maxiter\": 1000},\n",
     "               callback=obj.callback)\n"
    ]
   },
@@ -171,7 +187,7 @@
    "source": [
     "obj.clear_history()\n",
     "res = minimize(scipy_fun, obj.x0, jac=True, method='bfgs', tol=1e-20,\n",
-    "               options={\"maxiter\": 500},\n",
+    "               options={\"maxiter\": 1000},\n",
     "               callback=obj.callback)"
    ]
   },
@@ -208,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
