--- a/Wednesday_VacuumOpt/Project 5 -  Regularisation of coils.ipynb
+++ b/Wednesday_VacuumOpt/Project 5 -  Regularisation of coils.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 5 - Regularisation and Pareto fronts\n",
+    "# Project 5 - Regularisation of coils\n",
     "\n",
-    "An important aspect in the design of Stellarators is the complexity of the coils. The simpler the coil shapes, the cheaper and easier they are to build. Two measures of complexity are given by the curvature and the torsion of the coils. The vacuum optimisation code allows the user to add penalty terms to the objective that penalise large curvature or torsion.\n",
+    "An important aspect in the design of Stellarators is the complexity of the coils. The simpler the coil shapes, the cheaper and easier they are to build. A measure of complexity is given by the curvature of the coils. The vacuum optimisation code allows the user to add penalty terms to the objective that penalise large curvature.\n",
     "\n",
     "Let's begin by setting up the objective."
    ]
@@ -19,7 +19,7 @@
    "source": [
     "from pyplasmaopt import *\n",
     "nfp = 2\n",
-    "(coils, currents, expansion_axis, eta_bar) = get_24_coil_data(Nt_coils=5, Nt_ma=5, nfp=nfp, ppp=10, at_optimum=False)\n",
+    "(coils, currents, expansion_axis, eta_bar) = get_24_coil_data(Nt_coils=5, Nt_ma=5, nfp=nfp, ppp=5, at_optimum=False)\n",
     "stellarator = CoilCollection(coils, currents, nfp, True)\n",
     "iota_target = 0.103\n",
     "coil_length_target = 4.398229715025710\n",
@@ -92,13 +92,13 @@
     "    def kappa(coil):\n",
     "        # array with shape (N, 3) giving the (x, y, z) coordinates of N points along the curve\n",
     "        gamma = coil.gamma\n",
-    "        # array with shape (N, 3) giving the derivative of the curve \n",
-    "        dgamma_by_dphi = = coil.dgamma_by_dphi[:, 0, :]at those same N points\n",
+    "        # array with shape (N, 3) giving the derivative of the curve at those same N points\n",
+    "        dgamma_by_dphi = coil.dgamma_by_dphi[:, 0, :]\n",
     "        # array with shape (N, 3) giving the second derivative of the curve at those same N points\n",
-    "        d2gamma_by_dphidphi = = coil.dgamma_by_dphi[:, 0, 0, :]\n",
-    "        \n",
+    "        d2gamma_by_dphidphi = coil.d2gamma_by_dphidphi[:, 0, 0, :]\n",
+    "\n",
     "        kappa = ???\n",
-    "        \n",
+    "\n",
     "        return kappa\n",
     "   \n",
     "You can check your code by computing the curvature of the initial coils. They should all have curvature $\\approx 1.42857143$. Now use this function to compute the maximum curvature on all 6 coils obtained from the unregularised optimisation.\n",
@@ -206,7 +206,8 @@
     "maxcurvatures = []\n",
     "ws = [1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3]\n",
     "xmins = []\n",
-    "\n",
+    "# This will take a while. If you are doing this in a group, you may want to \n",
+    "# split this up between a few people and then collect results after.\n",
     "for w in ws:\n",
     "    obj.curvature_weight = w\n",
     "    obj.clear_history()\n",
@@ -227,7 +228,23 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "plt.semilogx(qsmisfits, maxcurvatures)\n",
+    "plt.xlabel('Quasi-Symmetry and Iota misfit')\n",
+    "plt.ylabel('Maximum curvature')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observation: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can clearly see the tradeoff between the physics objective and the coil simplicity. However, we can also see that we can still achieve a good value of the physics objective ($\\sim 10^{-7}$) using much simpler coils with $\\kappa\\approx 2$. Any further improvement in the physics objective, results in a significant increase in coil curvature."
    ]
   }
  ],
@@ -247,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
