--- a/Wednesday_VacuumOpt/constrained-opt-lec.ipynb
+++ b/Wednesday_VacuumOpt/constrained-opt-lec.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be seen that quadratically regularized objective becomes more difficult to minimize due to narrow, steep valleys in the presence of equality constraints, or simply steep slopes close to the minimizer. As we've seen, this is challenging for unconstrained optimization. Hence, one often performs a continuation procedure as follows:\n",
+    "It can be seen that the quadratically regularized objective becomes more difficult to minimize due to narrow, steep valleys in the presence of equality constraints, or simply steep slopes close to the minimizer. As we've seen, this is challenging for unconstrained optimization. Hence, one often performs a continuation procedure as follows:\n",
     "\n",
     "1. Choose $\\mu$ relatively large and an initialization $x^0$\n",
     "2. Solve the quadratically regularized optimization problem starting from $x^0$ to find solution $x^*_\\mu$\n",
