--- a/Wednesday_VacuumOpt/constrained-opt-lab_00.ipynb
+++ b/Wednesday_VacuumOpt/constrained-opt-lab_00.ipynb
@@ -412,7 +412,7 @@
     "\\min_{\\mathbf{c}_1, \\mathbf{c}_2} &~R(\\mathbf{c}_1, \\mathbf{c}_2) + \\frac{\\mu_1 }{2}(L_1(\\mathbf{c}_1) - L_0)^2+ \\frac{\\mu_2 }{2}(L_1(\\mathbf{c}_2) - L_0)^2.\n",
     "\\end{align}\n",
     "\n",
-    "Thus, we would like to solve the above unconstrained optimization problem. Moreover, the parameters $\\mu_1$ and $\\mu_2$ describe the trade-off between how important the lengths terms are compared to the coil distance term. Making them very large means we want the achieve the target coil length almost exactly, while keeping them smaller means that enfor\n",
+    "Thus, we would like to solve the above unconstrained optimization problem. Moreover, the parameters $\\mu_1$ and $\\mu_2$ describe the trade-off between how important the lengths terms are compared to the coil distance term. Making them very large means we want the achieve the target coil length almost exactly, while keeping them smaller means that enforcing coil distance is more important.\n",
     "The functions below compute the objective function and its gradient.\n"
    ]
   },
