--- a/Wednesday_VacuumOpt/constrained-opt-lab_01.ipynb
+++ b/Wednesday_VacuumOpt/constrained-opt-lab_01.ipynb
@@ -211,13 +211,13 @@
    "source": [
     "# A simple objective function\n",
     "\n",
-    "Let's try and find an axis geometry that results in a prescribed rotational transform, $\\iota_0$, with a prescribed axis length $L_0$.  That is, we want to solve\n",
+    "Let's try and find an axis geometry and a value for $\\overline{\\eta}$ that results in a target rotational transform, $\\iota_0$, with a prescribed axis length $L_0$.  That is, we want to solve\n",
     "\\begin{align}\n",
     "&\\text{min}_{\\mathbf{c},\\overline{\\eta}} ~ \\frac{1}{2}(\\iota - \\iota_0)^2 + \\frac{1}{2}(L(\\mathbf{c})-L_{0})^2 \\\\\n",
     "& \\text{subject to } \\mathbf{f}(\\mathbf{c},\\overline{\\eta},\\iota) = 0,\n",
     "\\end{align}\n",
     "\n",
-    "where $\\mathbf{c}$ is the vector of Fourier coefficients of the expansion axis.  That is, we are interested in finding the geometry of the expansion axis that produces a target rotational transform $\\iota_0$ and has a target length $L_{0}$. Let's construct the objective function above as well as its gradient.\n",
+    "where $\\mathbf{c}$ is the vector of Fourier coefficients of the expansion axis.  That is, we are interested in finding the geometry of the expansion axis that produces a target rotational transform $\\iota_0$ and has a target length $L_{0}$. Let's construct the objective function above as well as its gradient with respect to $\\mathbf{c}$ and $\\overline{\\eta}$.\n",
     "\n",
     "\n",
     "The `QuasiSymmetricField` class solves for the sensitivity of $\\iota$ with respect to the expansion axis design parameters."
@@ -275,7 +275,7 @@
    "source": [
     "# Taylor Test\n",
     "\n",
-    "Verify your implementation of the objective function J and its gradient dJ by doing a Taylor test.  In the code below, we are computing the directional derivative of $J$ in a random direction $h$ using a finite difference stencil of various orders of accuracy.  Then, we are comparing the finite difference direction derivative, with the analytical directional derivative computed by the code. This is a standard way of verifying that the gradient has been correctly implemented.\n",
+    "Verify your implementation of the objective function `J` and its gradient `dJ` by doing a Taylor test.  In the code below, we are computing the directional derivative of $J$ in a random direction $h$ using a finite difference stencil of various orders of accuracy.  Then, we are comparing the finite difference directional derivative with the analytical directional derivative computed by the `PyPl. This is a standard way of verifying that the gradient has been correctly implemented.\n",
     "\n",
     "## Task 3\n",
     "\n",
