separate solution notebook

--- a/Wednesday_VacuumOpt/Project 2 - Fieldline and particle tracing-Solution.ipynb
+++ b/Wednesday_VacuumOpt/Project 2 - Fieldline and particle tracing-Solution.ipynb
@@ -87,6 +87,160 @@
    "source": [
     "## Solution"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.integrate import solve_ivp, RK45, OdeSolution\n",
+    "def rhs(t, xyz):\n",
+    "    return biot_savart(stellarator, xyz)\n",
+    "y0 = expansion_axis.gamma[0, :]\n",
+    "solver = RK45(rhs, 0, y0, 10, rtol=1e-9, atol=1e-09)\n",
+    "ys = []\n",
+    "ts = []\n",
+    "while solver.t < 10:\n",
+    "    solver.step()\n",
+    "    ys.append(solver.y)\n",
+    "    ts.append(solver.t)\n",
+    "ys = np.asarray(ys)\n",
+    "plot_stellarator(stellarator, axis=expansion_axis, extra_data=[ys])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We rewrite the 2nd order ODE as a system of two ODES:\n",
+    "\n",
+    "$$ \\begin{bmatrix}\\dot X \\\\ \\dot V \\end{bmatrix} = \\begin{bmatrix} V(t) \\\\ \\frac qm \\dot V(t) \\times B(X(t)) \\end{bmatrix}  $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.integrate import solve_ivp, RK45, OdeSolution\n",
+    "m = 6.644657230*1e-27\n",
+    "q = 2*1.602176634*1e-19\n",
+    "def rhs_part(t, y):\n",
+    "    X = y[0:3]\n",
+    "    V = y[3:6]\n",
+    "    B = biot_savart(stellarator, X)\n",
+    "    rhs = np.zeros_like(y)\n",
+    "    rhs[0:3] = V\n",
+    "    rhs[3:6] = (q/m) * np.cross(V, B)\n",
+    "    return rhs\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v0 = np.asarray([1e5, 2e5, 0])\n",
+    "y0 = np.zeros((6, ))\n",
+    "y0[0:3] = expansion_axis.gamma[0, :]\n",
+    "y0[3:6] = v0\n",
+    "tmax = 1e-4\n",
+    "solver = RK45(rhs_part, 0, y0, tmax, rtol=1e-5, atol=1e-5)\n",
+    "ys = []\n",
+    "ts = []\n",
+    "while solver.t < tmax:\n",
+    "    solver.step()\n",
+    "    ys.append(solver.y)\n",
+    "    ts.append(solver.t)\n",
+    "ysa = np.asarray(ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_stellarator(stellarator, axis=expansion_axis, extra_data=[ysa[:, 0:3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "fig = px.line(ysa[:, 0:3])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v0 = np.asarray([3e5, 2e5, 0])\n",
+    "y0 = np.zeros((6, ))\n",
+    "y0[0:3] = expansion_axis.gamma[0, :]\n",
+    "y0[3:6] = v0\n",
+    "tmax = 1e-4\n",
+    "solver = RK45(rhs_part, 0, y0, tmax, rtol=1e-5, atol=1e-5)\n",
+    "ys = []\n",
+    "ts = []\n",
+    "while solver.t < tmax:\n",
+    "    solver.step()\n",
+    "    ys.append(solver.y)\n",
+    "    ts.append(solver.t)\n",
+    "ysb = np.asarray(ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "fig = px.line(ysb[:, 0:3])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_stellarator(stellarator, axis=expansion_axis, extra_data=[ysa[:, 0:3], ysb[:, 0:3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observation: \n",
+    "The second particle has an initial velocity with much larger component in perpendicular direction to the initial magnetic field. Consequently, its gyro radius is larger. We also observe that it deviates from the magnetic axis quicker than the first particle."
+   ]
   }
  ],
  "metadata": {
