--- a/Wednesday_VacuumOpt/Project 5 -  Regularisation of coils-Solution.ipynb
+++ b/Wednesday_VacuumOpt/Project 5 -  Regularisation of coils-Solution.ipynb
@@ -119,6 +119,134 @@
    "source": [
     "## Solutions"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kappa(coil):\n",
+    "    # array with shape (N, 3) giving the (x, y, z) coordinates of N points along the curve\n",
+    "    gamma = coil.gamma\n",
+    "    # array with shape (N, 3) giving the derivative of the curve at those same N points\n",
+    "    dgamma_by_dphi = coil.dgamma_by_dphi[:, 0, :]\n",
+    "    # array with shape (N, 3) giving the second derivative of the curve at those same N points\n",
+    "    d2gamma_by_dphidphi = coil.d2gamma_by_dphidphi[:, 0, 0, :]\n",
+    "\n",
+    "    kappa = (np.linalg.norm(np.cross(dgamma_by_dphi, d2gamma_by_dphidphi), axis=1)/np.linalg.norm(dgamma_by_dphi, axis=1)**3)\n",
+    "\n",
+    "    return kappa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj.update(obj.x0)\n",
+    "print('Maximum curvature for each initial coil:\\n', [np.max(kappa(c)) for c in coils])\n",
+    "obj.update(res.x)\n",
+    "print('Maximum curvature for each optimised coil (without regularisation):\\n', [np.max(kappa(c)) for c in coils])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "obj.curvature_weight = 1e-3\n",
+    "obj.clear_history()\n",
+    "res_reg = minimize(scipy_fun, res.x, jac=True, method='bfgs', tol=1e-20,\n",
+    "                   options={\"maxiter\": 500},\n",
+    "                   callback=obj.callback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_stellarator(stellarator, axis=expansion_axis)\n",
+    "print('Maximum curvature for each optimised coil (with regularisation):\\n', [np.max(kappa(c)) for c in coils])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qsmisfits = []\n",
+    "maxcurvatures = []\n",
+    "ws = [1e-9, 1e-8, 1e-7, 1e-6, 1e-5, 1e-4, 1e-3]\n",
+    "xmins = []\n",
+    "# This will take a while. If you are doing this in a group, you may want to \n",
+    "# split this up between a few people and then collect results after.\n",
+    "for w in ws:\n",
+    "    obj.curvature_weight = w\n",
+    "    obj.clear_history()\n",
+    "    res_reg = minimize(scipy_fun, res.x, jac=True, method='bfgs', tol=1e-20,\n",
+    "                       options={\"maxiter\": 1000, \"maxcor\": 100},\n",
+    "                       callback=obj.callback)\n",
+    "    qsmisfits.append(obj.res1 + obj.res4)\n",
+    "    maxcurvatures.append(max(np.max(c.kappa) for c in coils))\n",
+    "    xmins.append(res_reg.x.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.semilogx(qsmisfits, maxcurvatures)\n",
+    "plt.xlabel('Quasi-Symmetry and Iota misfit')\n",
+    "plt.ylabel('Maximum curvature')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observation: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can clearly see the tradeoff between the physics objective and the coil simplicity. However, we can also see that we can still achieve a good value of the physics objective ($\\sim 10^{-7}$) using much simpler coils with $\\kappa\\approx 2$. Any further improvement in the physics objective, results in a significant increase in coil curvature."
+   ]
   }
  ],
  "metadata": {
