more edits to lab 01

--- a/Wednesday_VacuumOpt/constrained-opt-lab_01.ipynb
+++ b/Wednesday_VacuumOpt/constrained-opt-lab_01.ipynb
@@ -177,9 +177,9 @@
     "\n",
     "After discretization with a spectral method, the above periodic Ricatti equation becomes\n",
     "$$\n",
-    "f(\\mathbf{c},\\overline{\\eta},\\iota) = 0.\n",
+    "f(\\mathbf{a},\\overline{\\eta},\\iota) = 0.\n",
     "$$\n",
-    "Thus, given the Fourier coefficients of the coils, $\\mathbf{c}$, we can solve this discretized equation for $\\sigma$ and $\\iota$.  This is done using `PyPlasmaOpt` below."
+    "Thus, given the Fourier coefficients of the axis, $\\mathbf{a}$, we can solve this discretized equation for $\\sigma$ and $\\iota$.  This is done using `PyPlasmaOpt` below."
    ]
   },
   {
@@ -214,13 +214,13 @@
     "Let's try and find an axis geometry and a value for $\\overline{\\eta}$ that results in a target rotational transform, $\\iota_0$, with a prescribed axis length $L_0$.  That is, we want to solve\n",
     "\\begin{align}\n",
     "&\\text{min}_{\\mathbf{c},\\overline{\\eta}} ~ \\frac{1}{2}(\\iota - \\iota_0)^2 + \\frac{1}{2}(L(\\mathbf{c})-L_{0})^2 \\\\\n",
-    "& \\text{subject to } \\mathbf{f}(\\mathbf{c},\\overline{\\eta},\\iota) = 0,\n",
+    "& \\text{subject to } \\mathbf{f}(\\mathbf{a},\\overline{\\eta},\\iota) = 0,\n",
     "\\end{align}\n",
     "\n",
-    "where $\\mathbf{c}$ is the vector of Fourier coefficients of the expansion axis.  That is, we are interested in finding the geometry of the expansion axis that produces a target rotational transform $\\iota_0$ and has a target length $L_{0}$. Let's construct the objective function above as well as its gradient with respect to $\\mathbf{c}$ and $\\overline{\\eta}$.\n",
+    "where $\\mathbf{a}$ is the vector of Fourier coefficients of the expansion axis.  That is, we are interested in finding the geometry of the expansion axis that produces a target rotational transform $\\iota_0$ and has a target length $L_{0}$. Let's construct the objective function above as well as its gradient with respect to $\\mathbf{a}$ and $\\overline{\\eta}$.\n",
     "\n",
     "\n",
-    "The `QuasiSymmetricField` class solves for the sensitivity of $\\iota$ with respect to the expansion axis design parameters."
+    "The `QuasiSymmetricField` class solves for the sensitivity of $\\iota$ with respect to the expansion axis design parameters using the forward sensitivity approach."
    ]
   },
   {
