--- a/Thursday/stochastic_optimisation_lab.ipynb
+++ b/Thursday/stochastic_optimisation_lab.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stochastic Optimisation Lab"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
