cleanup and text

--- a/Thursday/stochastic_optimisation_lab.ipynb
+++ b/Thursday/stochastic_optimisation_lab.ipynb
@@ -24,9 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PyPlasmaOpt makes is easy to create pertubed coils. Perturbations are governed by two user parameters:\n",
-    "- a length scale for the perbutation (short = high frequence perturbance, long=low frequence pertubations)\n",
+    "PyPlasmaOpt makes is easy to create pertubed coils. The two key ingredients are the `GaussianSampler` and the `PerturbedCurve` objects. The `GaussianSampler` generates periodic Gaussian Processes that model the perturbation of the curves. These perturbations are governed by two user parameters:\n",
+    "- a length scale for the perbutation (short = high frequence perturbations, long=low frequence pertubations)\n",
     "- a magnitude of the perturbation.\n",
+    "\n",
+    "The `PerturbedCurve` then takes an initial curve and a perturbation to generate the new, perturbed curve.\n",
     "Below you can see a snipped of code that creates a pertubed coil and first plots the x, y, and z component of the pertubation and the plots the actual perturbed coil."
    ]
   },
@@ -127,8 +129,7 @@
     "vals = []\n",
     "for obj in objectives:\n",
     "    obj.update(res.x)\n",
-    "    vals.append(obj.res)\n",
-    "print(vals)"
+    "    vals.append(obj.res)"
    ]
   },
   {
@@ -191,7 +192,7 @@
     "    return res, dres\n",
     "\n",
     "res_stoch = minimize(scipy_fun_stoch, det_objective.x0, jac=True, method='bfgs', tol=1e-20,\n",
-    "               options={\"maxiter\": 500, \"maxcor\": 100},\n",
+    "               options={\"maxiter\": 500},\n",
     "               callback=objectives[0].callback)\n",
     "print(res)"
    ]
@@ -210,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot the objective values at the found minimum. Comparing this with the histogram above, we can see that the objective is a fair bit smaller on average. "
+    "Let's plot the objective values at the found minimum. Comparing this with the histogram above, we can see that the objective is a fair bit smaller on average. Success!"
    ]
   },
   {
@@ -271,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation**: We can see that the out-of-sample mean is slightly worse than the in-sample mean, but still significantly better than what we obtained from deterministic optimisation."
+    "**Observation**: We can see that the out-of-sample mean is higher than the in-sample mean, but still significantly better than what we obtained from deterministic optimisation."
    ]
   },
   {
@@ -280,6 +281,23 @@
    "source": [
     "### Task:\n",
     "Change the `nsamples` variable in the third code cell to a low number, say 4, and rerun the stochastic optimisation and the in-sample vs out-of-sample comparison. How does it change?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, lets plot the stellarator obtained from the stochastic optimisation. Does it look any different?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "det_objective.update(res_stoch.x)\n",
+    "plot_stellarator(det_objective.stellarator, axis=det_objective.ma)"
    ]
   }
  ],
