--- a/Thursday/stochastic-opt-lec.ipynb
+++ b/Thursday/stochastic-opt-lec.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Constrained optimization"
+    "# Basic stochastic optimization"
    ]
   },
   {
